crates/mini_haskell_parser/snapshots/parser/output/primary.snap
---
source: crates/mini_haskell_parser/src/parser.rs
expression: asts
---
[
    Ok(
        Literal(
            Bool(
                false,
            ),
        ),
    ),
    Ok(
        Literal(
            Bool(
                true,
            ),
        ),
    ),
    Ok(
        Literal(
            NatureNum(
                123,
            ),
        ),
    ),
]
